# vajra

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN-BRIEF.html  README.md  VAJRA-MASTER.md  VISION.md  kimchi-session-2026-06-17T04-13-14-929Z_019ed3c8-8731-7429-91bb-99dab342d140.html  next prompt .md
.ai/: AGENTS.md  CONSTRAINTS.yaml  KNOWLEDGE.md  ROADMAP.md  SESSION-BOOT.md  STATE.md  TASK.md
.claude/: settings.json
.githooks/: README.md  pre-commit  pre-push
Formula/: vajra.rb
prompts/: 00-task-discovery.md  01-task-cargo-engine.md  02-task-compression-heuristics.md  03-task-hook-adapter.md  04-task-launcher.md  05-task-ground-truth.md  06-task-live-claude-proof.md  07-task-live-claude-proof.md  08-task-vajra-init.md  09-task-check-and-next.md  10-task-ground-truth-audit.md  11-task-budget-guard.md  12-task-e2e-next-proof.md  13-task-installer.md  14-task-maturity-levels.md  15-task-ground-truth.md  16-task-cleanup-and-drift-fix.md  17-task-pre-run-cost-estimate.md  18-task-product-review-and-vision.md  19-task-varta-skill.md  20-task-ground-truth.md
research/: AGENT-TRACE-AND-AXONFLOW.md  COMPETITIVE-LEARNINGS.md  COMPETITOR-TEARDOWN.md  HEADROOM-LESSONS.md  JSONL-RECON.md
scripts/: ai-session  demo-session-01.ts  demo-session-03.sh  demo-session-08.sh  demo-session-09.sh  demo-session-11.sh  demo-session-12.sh  demo-session-13.sh  demo-session-14.sh  demo-session-16.sh  demo-session-17.sh  demo-session-19.sh  hook-drift-guard.sh  hook-pre-bash.sh  hook-pre-write.sh  hook-prompt-submit.sh  hook-session-start.sh  hook-stop.sh  (+18 more)
(+78 files in other folders)
